--- a/caesarCipher/styles.css
+++ b/caesarCipher/styles.css
@@ -54,6 +54,7 @@ button{
   border: none;
   color: #ffffff;
   padding: 10px 0;
+  margin-bottom: 20px;
   cursor: pointer;
   font-weight: bold;
 }
@@ -68,6 +69,7 @@ button:active{
 }
 
 .cipher{
+  display: none;
   background-color: #154b46;
   width: 240px;
   margin: 0 auto;
